--- a/style.css
+++ b/style.css
@@ -114,6 +114,126 @@ ul {
         padding: 10px 0;
         margin: 0 10px;
     }
+
+    .main {
+        margin-top: 50px;
+    }
+
+
+
+
+
+
+
+
+    /* Собственно сам слайдер */
+    .slider {
+        max-width: 90%;
+        position: relative;
+        margin: auto;
+        height: 300px;
+        margin-bottom: 15px;
+    }
+
+    /* Картинка мастабируется по отношению к родительскому элементу */
+    .slider .item img {
+        object-fit: cover;
+        width: 100%;
+        height: 300px;
+        border: none !important;
+        box-shadow: none !important;
+    }
+
+    /* Кнопки вперед и назад */
+    .slider .prev,
+    .slider .next {
+        cursor: pointer;
+        position: absolute;
+        top: 0;
+        top: 50%;
+        width: auto;
+        margin-top: -22px;
+        padding: 16px;
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+    }
+
+    .slider .next {
+        right: 0;
+        border-radius: 3px 0 0 3px;
+    }
+
+    /* При наведении на кнопки добавляем фон кнопок */
+    .slider .prev:hover,
+    .slider .next:hover {
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+
+    /* Заголовок слайда */
+    .slideText {
+        position: absolute;
+        color: #fff;
+        font-size: 35px;
+        /* Выравнивание текста по горизонтали и по вертикали*/
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        /* Тень*/
+        text-shadow: 1px 1px 1px #000, 0 0 1em #000;
+    }
+
+    /* Кружочки */
+    .slider-dots {
+        text-align: center;
+    }
+
+    .slider-dots_item {
+        cursor: pointer;
+        height: 12px;
+        width: 12px;
+        margin: 0 2px;
+        background-color: #ddd;
+        border-radius: 50%;
+        display: inline-block;
+        transition: background-color 0.6s ease;
+    }
+
+    .active,
+    .slider-dots_item:hover {
+        background-color: #aaa;
+    }
+
+    /* Анимация слайдов */
+    .slider .item {
+        -webkit-animation-name: fade;
+        -webkit-animation-duration: 1.5s;
+        animation-name: fade;
+        animation-duration: 1.5s;
+    }
+
+    @-webkit-keyframes fade {
+        from {
+            opacity: .4
+        }
+
+        to {
+            opacity: 1
+        }
+    }
+
+    @keyframes fade {
+        from {
+            opacity: .4
+        }
+
+        to {
+            opacity: 1
+        }
+    }
+
 }
 
 .nametitle {
@@ -126,13 +246,20 @@ ul {
 
 
 @media(max-width: 599px) {
+
+
     .header {
         display: none;
     }
 
-    .nametitle{
+    .nametitle {
         display: none;
     }
+
+    .slider {
+        display: none;
+    }
+
 
     .phone {}
 
@@ -214,12 +341,12 @@ ul {
         -webkit-font-smoothing: antialiased;
         transform-origin: 0% 0%;
         transform: translate(-100%, 0);
-        transition: transform 0.5s ;
+        transition: transform 0.5s;
     }
 
     #menu li {
         padding-bottom: 10px;
-        text-decoration: none; 
+        text-decoration: none;
         font-size: 20px;
         padding-left: 10px;
         transition-delay: 2s;
