--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ ul {
 }
 
 .topmenu li a:hover {
-    color: #c0a97a;
+    color: #000;
     /*какой цвет?*/
 }
 
@@ -50,14 +50,40 @@ ul {
 }
 
 @media(min-width: 600px) {
-    .phone {
+    .contentphone {
         display: none;
     }
+
+    .hat {
+        width: 100%;
+        height: 500px;
+        float: left;
+        background-image: url(img/header.gif);
+    }
+
+    .hat h1 {
+
+        text-align: center;
+        color: #fafafa;
+        text-transform: capitalize;
+        font-size: 200px;
+        line-height: 400px;
+
+    }
+
+    .hat p {
+        text-align: center;
+        color: #fafafa;
+        font-family: 'Gentium Book Basic';
+        line-height: 10px;
+    }
+
 
     .topmenu {
         width: 100%;
         display: flex;
         justify-content: space-between;
+        user-select: none;
     }
 
     .topmenu>li {
@@ -120,12 +146,6 @@ ul {
     }
 
 
-
-
-
-
-
-
     /* Собственно сам слайдер */
     .slider {
         max-width: 90%;
@@ -133,6 +153,7 @@ ul {
         margin: auto;
         height: 300px;
         margin-bottom: 15px;
+        overflow: hidden;
     }
 
     /* Картинка мастабируется по отношению к родительскому элементу */
@@ -232,13 +253,96 @@ ul {
         to {
             opacity: 1
         }
+
+
+    }
+
+    .content {
+        margin-left: 100px;
+        margin-right: 100px;
+    }
+
+    .photo {
+        margin-top: 50px;
+        margin-bottom: 50px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 90%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .photo img {
+        margin-top: auto;
+        margin-bottom: auto;
+        width: 30%;
+        height: 30%;
+        border: 10px solid #977763;
+        border-radius: 10px;
+        width: initial;
+        overflow: hidden;
+        margin: 10px;
+        box-shadow: 5px 5px;
+    }
+
+    .photosecond {
+        margin-top: 50px;
+        margin-bottom: 50px;
+        width: 90%;
+    }
+
+    .photosecond img {
+        position: relative;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%);
+        width: 30%;
+        height: 30%;
+        border: 10px solid #977763;
+        border-radius: 10px;
+        overflow: hidden;
+        margin: 10px;
+        box-shadow: 5px 5px;
+    }
+
+    .cellar {
+        width: 100%;
+        height: 100px;
+        background-color: #977763;
+        float: right;
+        color: #fafafa;
+        padding: 10px;
+    }
+
+    .enderp {
+        margin-bottom: 50px;
     }
 
 }
 
+.header {
+    user-select: none;
+}
+
+
 .nametitle {
+    margin-bottom: 50px;
+    font-size: 28px;
     width: 100%;
     text-align: center;
+}
+
+
+.content p {
+    text-align: justify;
+    font-size: 20px;
+}
+
+.content h3 {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    text-align: center;
+    font-size: 40px;
 }
 
 
@@ -247,28 +351,40 @@ ul {
 
 @media(max-width: 599px) {
 
-
-    .header {
+    .header nav {
         display: none;
     }
 
-    .nametitle {
-        display: none;
-    }
 
     .slider {
         display: none;
     }
 
+    .hat {
+        width: 100%;
+        height: 100px;
+        background-image: url(img/header.gif);
+    }
 
-    .phone {}
+    .hat h1 {
+        text-align: center;
+        color: #fafafa;
+        text-transform: capitalize;
+        font-size: 50px;
+
+    }
+
+    .hat p {
+        text-align: center;
+        color: #fafafa;
+        font-family: 'Gentium Book Basic';
+    }
 
     nav {
         width: 100%;
         background-color: #977763;
         height: 65px;
     }
-
 
     #menuToggle {
         display: flex;
@@ -355,4 +471,59 @@ ul {
     #menuToggle input:checked~ul {
         transform: none;
     }
+
+    .content p {
+        text-align: justify;
+        font-size: 20px;
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+
+    .photo {
+        margin-top: 50px;
+        margin-bottom: 50px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 90%;
+    }
+
+    .photo img {
+        width: 90%;
+        height: 90%;
+        border: 10px solid #977763;
+        border-radius: 10px;
+        overflow: hidden;
+        margin: 10px;
+        box-shadow: 5px 5px;
+    }
+
+    .photosecond {
+        margin-top: 50px;
+        margin-bottom: 50px;
+        width: 90%;
+    }
+
+    .photosecond img {
+        position: relative;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%);
+        width: 90%;
+        height: 90%;
+        border: 10px solid #977763;
+        border-radius: 10px;
+        overflow: hidden;
+        margin: 10px;
+        box-shadow: 5px 5px;
+    }
+
+    .cellar {
+        width: 100%;
+        height: 50px;
+        background-color: #977763;
+        float: right;
+        color: #fafafa;
+        padding: 10px;
+    }
+
 }
